# OpenArchFlow

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  eslint.config.mjs  fly.toml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-glue-image.yml
docker/glue/: Dockerfile  entrypoint.sh  forward_logs.py
docs/: OpenArchFlow_AWS_2026-02-20.json  OpenArchFlow_sample.json
docs/examples/lambda/rust/: Cargo.toml  README.md
docs/examples/lambda/rust/src/: main.rs
lib/: aws-icon-registry.ts  store.ts
lib/ai/: webllm.ts
lib/mcp/: aws-client.ts
public/: manifest.json  robots.txt
scripts/: signaling.mjs  test-mcp.ts
src/app/: globals.css  head.tsx  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
src/components/diagram/: AWSNode.tsx  AlignmentGuides.tsx  AlignmentToolbar.tsx  AnnotationNode.tsx  BillOfMaterials.tsx  CloudNode.tsx  CollaborationCursors.tsx  ComponentPalette.tsx  CustomShapeNode.tsx  DiagramChat.tsx  FloatingInput.tsx  FlowCanvas.tsx  FrameNode.tsx  GenericNode.tsx  InfraDiscoveryDialog.tsx  (+16 more)
src/hooks/: useBedrockExpiry.ts  useGoogleAuth.ts  useGoogleDriveSync.ts  useKeyboardShortcuts.ts  useResizable.ts
src/lib/: aws-dea-prompts.ts  aws-icon-registry.ts  aws-saa-prompts.ts  aws-services.ts  collaboration.ts  format-payload.ts  google-drive.ts  layout-utils.ts  persistence.ts  shortcuts.ts  simulation.ts  store.ts  structured-data.ts  version.ts
(+100 files in other folders)
