[package]
name = "lambda-example"
version = "0.1.0"
edition = "2021"

# The binary must be named "bootstrap" for provided.al2023
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"   # minimize binary size
lto = true
codegen-units = 1
panic = "abort"
strip = true
